Update api and fix anchor position(#6)
