# ac-api/src/main/java/com/ac/api/models/ReconstructionStage.kt
@@ -1,0 +1,51 @@
+/**
+* Augmented City API
+* ## Description This is an API for the Augmented City platform ## Other resources For more information, please visit our website [https://www.augmented.city](https://www.augmented.city/) 
+*
+* The version of the OpenAPI document: 2.0.0
+* Contact: support@vergendo.com
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package com.ac.api.models
+
+
+import com.squareup.moshi.Json
+
+/**
+* | Stage  |  Description  |   | -- | -- |   | UPLOAD | Wait images upload |   | IN_QUEUE | Wait for processing |   | IN_PROCESS | Reconstruction in process |   | DONE | Processing is finished |  
+* Values: uPLOAD,iNQUEUE,iNPROCESS,dONE
+*/
+
+enum class ReconstructionStage(val value: kotlin.String){
+
+
+    @Json(name = "UPLOAD")
+    uPLOAD("UPLOAD"),
+
+
+    @Json(name = "IN_QUEUE")
+    iNQUEUE("IN_QUEUE"),
+
+
+    @Json(name = "IN_PROCESS")
+    iNPROCESS("IN_PROCESS"),
+
+
+    @Json(name = "DONE")
+    dONE("DONE");
+
+
+
+    /**
+    This override toString avoids using the enum var name and uses the actual api value instead.
+    In cases the var name and value are different, the client would send incorrect enums to the server.
+    **/
+    override fun toString(): String {
+        return value
+    }
+
+}
+
