# ac-api/src/main/java/com/ac/api/models/ReconstructionTaskStatus.kt
@@ -1,0 +1,35 @@
+/**
+* Augmented City API
+* ## Description This is an API for the Augmented City platform ## Other resources For more information, please visit our website [https://www.augmented.city](https://www.augmented.city/) 
+*
+* The version of the OpenAPI document: 2.0.0
+* Contact: support@vergendo.com
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package com.ac.api.models
+
+import com.ac.api.models.ReconstructionStage
+
+import com.squareup.moshi.Json
+
+/**
+ * Series reconstruction task process info
+ * @param taskId Series task id
+ * @param stage 
+ * @param images List of uploaded images filenames
+ */
+
+data class ReconstructionTaskStatus (
+    /* Series task id */
+    @Json(name = "task_id")
+    val taskId: java.util.UUID,
+    @Json(name = "stage")
+    val stage: ReconstructionStage,
+    /* List of uploaded images filenames */
+    @Json(name = "images")
+    val images: kotlin.collections.List<kotlin.String>? = null
+)
+
