# doc/swagger.yaml
@@ -31,21 +31,127 @@ tags:
     description: Get server version
     x-displayName: Version
 paths:
-  /supported_cities:
+  /get_cities_all:
+    servers:
+      - url: 'https://developer.augmented.city/rpc'
     get:
-      deprecated: true
-      summary: Get reconstructed cities list
-      operationId: getCities
+      summary: Get augmented cities list
+      operationId: getAllCities
       tags:
         - Reconstruction
-      description: List of scanned and reconstructed cities. Localization is possible only inside this zones.
+      description: Get the list of augmented cities. Localization is possible only inside scanned and reconstructed areas. Information about reconstructed areas will be provided in the future.
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ReconstructedCities'
+                $ref: '#/components/schemas/AugmentedCities'
+  /get_city:
+    servers:
+      - url: 'https://developer.augmented.city/rpc'
+    get:
+      summary: Get augmented city by gps
+      operationId: getCityByGps
+      tags:
+        - Reconstruction
+      description: Get augmented city by gps point
+      parameters:
+        - in: query
+          name: p_latitude
+          required: true
+          schema:
+            type: number
+            format: double
+          description: GPS latitude
+        - in: query
+          name: p_longitude
+          required: true
+          schema:
+            type: number
+            format: double
+          description: GPS longitude
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AugmentedCity'
+  /series:
+    post:
+      tags:
+        - Reconstruction
+      summary: Create reconstruction task
+      description: 'Create a new task to reconstruct a series of images. The task passes to the status of waiting for image upload after creation. After receiving a signal that the images have been uploaded, the task is added to the queue for processing.'
+      operationId: createReconstructionTask
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ScanSeriesDescription'
+      responses:
+        '200':
+          description: Series reconstruction task created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReconstructionTaskStatus'
+    put:
+      tags:
+        - Reconstruction
+      summary: Upload images for reconstruction
+      operationId: updateReconstructionTask
+      description: 'Upload images for reconstruction. You can upload one image or a group of images at a time. To send a signal that the upload is complete, call the method without image data. After receiving such a signal that images are being uploaded, the service adds the task to the queue and changes its status to IN_QUEUE. When the status is changed, new images cannot be uploaded.'
+      parameters:
+        - in: query
+          name: task_id
+          description: Reconstruction task id. Only one task_id could be specified
+          required: true
+          schema:
+            $ref: '#/components/schemas/ReconstructionTaskId'
+      requestBody:
+        description: Image or images list. Call with no images data to finish uploading and start reconstruction
+        required: false
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                image:
+                  $ref: '#/components/schemas/ImageWithExif'
+      responses:
+        '200':
+          description: Images uploaded
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReconstructionTaskStatus'
+    get:
+      tags:
+        - Reconstruction
+      summary: Get reconstruction task status
+      description: Get series reconstruction task status by task id. Several task ids could be specified. Return status for known task ids. Return nothing for unknown task ids.
+      operationId: getReconstructionStatus
+      parameters:
+        - in: query
+          name: task_id
+          required: true
+          description: Task id
+          schema:
+            $ref: '#/components/schemas/ReconstructionTaskIds'
+          style: form
+          explode: true
+      responses:
+        '200':
+          description: Series processing statuses list
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ReconstructionTaskStatus'
+                nullable: true
   /localizer/prepare:
     get:
       tags:
@@ -122,6 +228,8 @@ paths:
                   $ref: '#/components/schemas/ImageDescription'
                 image:
                   $ref: '#/components/schemas/Image'
+                hint:
+                  $ref: '#/components/schemas/LocalizationHint'
             encoding:
               description:
                 contentType: application/json
@@ -149,6 +257,29 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/ServerError'
+  /object/pose:
+    post:
+      summary: Add an object by 3D pose
+      tags:
+        - Objects
+      operationId: addObjectByPose
+      description: Add a new user object into database
+      responses:
+        '200':
+          description: Object processed
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AddObjectResult'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '500':
+          $ref: '#/components/responses/ServerError'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ObjectWithPose'
 components:
   schemas:
     Vector2d:
@@ -209,6 +340,30 @@ components:
           $ref: '#/components/schemas/Vector3d'
         orientation:
           $ref: '#/components/schemas/Quaternion'
+    GeoPosition:
+      type: array
+      description: 'Geo position in 3D space. A position is an array of numbers. There MUST be two or three elements. The first two elements are longitude and latitude, or easting and northing, precisely in that order and using decimal numbers. Altitude or elevation MAY be included as an optional third element.'
+      externalDocs:
+        url: 'https://tools.ietf.org/html/rfc7946#section-3.1.1'
+      minItems: 2
+      maxItems: 3
+      items:
+        type: number
+    GeoPoint:
+      type: object
+      description: Single geo position geometry type
+      externalDocs:
+        url: 'https://tools.ietf.org/html/rfc7946#section-3.1.2'
+      required:
+        - type
+        - coordinates
+      properties:
+        type:
+          type: string
+          enum:
+            - Point
+        coordinates:
+          $ref: '#/components/schemas/GeoPosition'
     Camera:
       type: object
       required:
@@ -216,6 +371,8 @@ components:
       properties:
         pose:
           $ref: '#/components/schemas/Pose'
+        intrinsics:
+          $ref: '#/components/schemas/CameraIntrinsics'
     PlaceholderNode3d:
       type: object
       required:
@@ -298,6 +455,31 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/ARObject'
+    ObjectWithPose:
+      type: object
+      required:
+        - reconstruction_id
+        - pose
+        - description
+      properties:
+        reconstruction_id:
+          type: integer
+        pose:
+          $ref: '#/components/schemas/Pose'
+        frame:
+          $ref: '#/components/schemas/Frame3d'
+        description:
+          type: object
+          required:
+            - sticker
+          properties:
+            sticker:
+              type: object
+              properties:
+                path:
+                  type: string
+                sticker_text:
+                  type: string
     PrepareStatus:
       type: object
       required:
@@ -388,41 +570,65 @@ components:
           $ref: '#/components/schemas/ARObjects'
         status:
           $ref: '#/components/schemas/AddObjectStatus'
-    ReconstructedCity:
+    LocalizationHint:
       type: object
       required:
-        - id
-        - name
-        - countryName
-        - gps
+        - reconstructions
       properties:
-        id:
+        reconstructions:
+          type: array
+          items:
+            type: integer
+        hint_only:
+          type: boolean
+          default: false
+      description: 'List of reconstruction identifiers. The service will perform localization sequentially in each reconstruction according to the order specified in the list until the first successful result is obtained. If hint_only is true, the service will localize only in the specified reconstructions. If hint_only is false, the service will continue localization attempts in the nearest reconstructions'
+    AugmentedCity:
+      type: object
+      description: 'Information about the augmented city. Includes name, country and geometry of the city.'
+      required:
+        - city_id
+        - city
+        - country
+        - description
+      properties:
+        city_id:
           type: integer
           format: int32
-        name:
+          description: Numeric identifier of the city
+        city:
           type: string
-        countryName:
+          description: Name of the city
+          example: Saint Petersburg
+        country:
           type: string
-        gps:
+          description: Name of the country where the city is located
+          example: Russia
+        description:
+          $ref: '#/components/schemas/AugmentedCityDescription'
+    AugmentedCityDescription:
+      type: object
+      description: Additional city data
+      required:
+        - circle
+      properties:
+        circle:
           type: object
+          description: City center and radius
           required:
-            - latitude
-            - longitude
+            - center
             - radius
           properties:
-            latitude:
-              type: number
-              format: float
-            longitude:
-              type: number
-              format: float
+            center:
+              $ref: '#/components/schemas/GeoPoint'
             radius:
               type: number
               format: float
-    ReconstructedCities:
+              description: City radius in meters
+    AugmentedCities:
       type: array
       items:
-        $ref: '#/components/schemas/ReconstructedCity'
+        $ref: '#/components/schemas/AugmentedCity'
     Image:
       type: string
       format: binary
@@ -441,15 +647,21 @@ components:
             latitude:
               type: number
               format: float
+              example: 25.000933
             longitude:
               type: number
               format: float
+              example: -70.999828
             altitude:
               type: number
               format: float
+              example: 7
             hdop:
               type: number
               format: float
+              example: 2
+        intrinsics:
+          $ref: '#/components/schemas/CameraIntrinsics'
         focal_length_in_35mm_film:
           type: integer
         mirrored:
@@ -465,10 +677,162 @@ components:
           default: 0
           description: Clockwise camera rotation
       description: Describes gps position and camera parameters
+    CameraIntrinsics:
+      type: object
+      required:
+        - fx
+        - fy
+        - cx
+        - cy
+      properties:
+        fx:
+          type: number
+          format: float
+          description: Focal length
+        fy:
+          type: number
+          format: float
+          description: Focal length
+        cx:
+          type: number
+          format: float
+          description: Principal point
+        cy:
+          type: number
+          format: float
+          description: Principal point
+      description: Intrinsics are based on physical characteristics of the device camera and a pinhole camera model.
     ImageWithExif:
       type: string
       format: binary
       description: 'A JPEG-encoded image, must include GPS data in EXIF tags'
+    ReconstructionTaskId:
+      type: string
+      format: uuid
+      description: Series task id
+    ReconstructionTaskIds:
+      type: array
+      items:
+        $ref: '#/components/schemas/ReconstructionTaskId'
+    ReconstructionStage:
+      type: string
+      enum:
+        - UPLOAD
+        - IN_QUEUE
+        - IN_PROCESS
+        - DONE
+      description: |+
+        | Stage  |  Description  |
+          | -- | -- |
+          | UPLOAD | Wait images upload |
+          | IN_QUEUE | Wait for processing |
+          | IN_PROCESS | Reconstruction in process |
+          | DONE | Processing is finished |
+
+    ReconstructionTaskStatus:
+      type: object
+      required:
+        - task_id
+        - stage
+      properties:
+        task_id:
+          $ref: '#/components/schemas/ReconstructionTaskId'
+        stage:
+          $ref: '#/components/schemas/ReconstructionStage'
+        images:
+          type: array
+          items:
+            type: string
+            example: image.jpg
+          description: List of uploaded images filenames
+      description: Series reconstruction task process info
+    ScanSeriesDescription:
+      type: object
+      required:
+        - client
+        - daytime
+        - device
+        - name
+        - passages
+        - user
+      properties:
+        client:
+          type: string
+          description: Application name
+          example: 'AC Scanner  version_name: 1.0 version_type: release'
+        daytime:
+          $ref: '#/components/schemas/ScanDaytime'
+        device:
+          type: string
+          description: Phone or camera model
+          example: Mi MIX 3
+        name:
+          type: string
+          description: Location name
+          example: Elm street
+        passages:
+          $ref: '#/components/schemas/ScanPassages'
+        user:
+          type: string
+          description: User login or id
+          example: user@mail.com
+    ScanDaytime:
+      type: string
+      enum:
+        - DAY
+        - EVENING
+        - NIGHT
+      description: |+
+        | Time of day  |  Description  |
+          | -- | -- |
+          | DAY |    |
+          | EVENING |  |
+          | NIGHT |  |
+
+    ScanPassage:
+      type: object
+      required:
+        - style
+        - points
+      properties:
+        style:
+          $ref: '#/components/schemas/ScanStyle'
+        points:
+          type: array
+          items:
+            $ref: '#/components/schemas/ScanPoint'
+    ScanPassages:
+      type: array
+      items:
+        $ref: '#/components/schemas/ScanPassage'
+    ScanPoint:
+      type: array
+      items:
+        type: object
+        required:
+          - filename
+        properties:
+          filename:
+            type: string
+            description: Unique image filename
+            example: image_1.jpg
+          camera:
+            $ref: '#/components/schemas/Camera'
+    ScanStyle:
+      type: string
+      enum:
+        - LINEAR_AUTO
+        - LINEAR_MANUAL
+        - CIRCULAR_AUTO
+        - CIRCULAR_MANUAL
+      description: |+
+        | Scan style  |  Description  |
+          | -- | -- |
+          | LINEAR_AUTO |  |
+          | LINEAR_MANUAL |  |
+          | CIRCULAR_AUTO |  |
+          | CIRCULAR_MANUAL |  |
+
   responses:
     BadRequest:
       description: Bad request
