# reloc-api/src/main/java/com/ac/api/models/ImageDescription.kt
@@ -1,50 +1,0 @@
-/**
-* Augmented City API
-* ## Description This is an API for the Augmented City platform ## Other resources For more information, please visit our website [https://www.augmented.city](https://www.augmented.city/) 
-*
-* The version of the OpenAPI document: 2.0.0
-* Contact: support@vergendo.com
-*
-* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-* https://openapi-generator.tech
-* Do not edit the class manually.
-*/
-package com.ac.api.models
-
-import com.ac.api.models.ImageDescriptionGps
-
-import com.squareup.moshi.Json
-
-/**
- * Describes gps position and camera parameters
- * @param gps 
- * @param focalLengthIn35mmFilm 
- * @param mirrored 
- * @param rotation Clockwise camera rotation
- */
-
-data class ImageDescription (
-    @Json(name = "gps")
-    val gps: ImageDescriptionGps,
-    @Json(name = "focal_length_in_35mm_film")
-    val focalLengthIn35mmFilm: kotlin.Int? = null,
-    @Json(name = "mirrored")
-    val mirrored: kotlin.Boolean? = null,
-    /* Clockwise camera rotation */
-    @Json(name = "rotation")
-    val rotation: Int? = null
-) {
-
-    /**
-    * Clockwise camera rotation
-    * Values: _0,_90,_180,_270
-    */
-    
-    enum class Rotation(val value: kotlin.Int){
-        @Json(name = "0") _0(0),
-        @Json(name = "90") _90(90),
-        @Json(name = "180") _180(180),
-        @Json(name = "270") _270(270);
-    }
-}
-
