# reloc-api/src/main/java/com/ac/api/models/ReconstructedCity.kt
@@ -1,36 +1,0 @@
-/**
-* Augmented City API
-* ## Description This is an API for the Augmented City platform ## Other resources For more information, please visit our website [https://www.augmented.city](https://www.augmented.city/) 
-*
-* The version of the OpenAPI document: 2.0.0
-* Contact: support@vergendo.com
-*
-* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-* https://openapi-generator.tech
-* Do not edit the class manually.
-*/
-package com.ac.api.models
-
-import com.ac.api.models.ReconstructedCityGps
-
-import com.squareup.moshi.Json
-
-/**
- * 
- * @param id 
- * @param name 
- * @param countryName 
- * @param gps 
- */
-
-data class ReconstructedCity (
-    @Json(name = "id")
-    val id: kotlin.Int,
-    @Json(name = "name")
-    val name: kotlin.String,
-    @Json(name = "countryName")
-    val countryName: kotlin.String,
-    @Json(name = "gps")
-    val gps: ReconstructedCityGps
-)
-
