# reloc-api/src/main/java/com/ac/api/models/ReconstructedCityGps.kt
@@ -1,32 +1,0 @@
-/**
-* Augmented City API
-* ## Description This is an API for the Augmented City platform ## Other resources For more information, please visit our website [https://www.augmented.city](https://www.augmented.city/) 
-*
-* The version of the OpenAPI document: 2.0.0
-* Contact: support@vergendo.com
-*
-* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-* https://openapi-generator.tech
-* Do not edit the class manually.
-*/
-package com.ac.api.models
-
-
-import com.squareup.moshi.Json
-
-/**
- * 
- * @param latitude 
- * @param longitude 
- * @param radius 
- */
-
-data class ReconstructedCityGps (
-    @Json(name = "latitude")
-    val latitude: kotlin.Float,
-    @Json(name = "longitude")
-    val longitude: kotlin.Float,
-    @Json(name = "radius")
-    val radius: kotlin.Float
-)
-
